--- a/farm/index.html
+++ b/farm/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/uaplus.css">
     <link rel="stylesheet" href="css/styl.css">
     <title>FARM CAPYZOU|ファームカピぞう</title>
 </head>
@@ -52,6 +53,7 @@
 </article>
 </main>
 <aside>
+<nav class="categoryNav">
 <h2>Category</h2>
 <ul>
 <li><a href="">農家の日常(4)</a></li>
@@ -59,13 +61,18 @@
 <li><a href="">カピぞうレシピ(2)</a></li>
 <li><a href="">農家の経営(2)</a></li>
 </ul>
+</nav>
+<nav class="recentNav">
 <h2>Recent Articles</h2>
-<a>温室栽培での注意トップ10</a>
-<a>虫の駆除方法を現役農家がレクチャーします</a>
-<a>お家でもできる！プランター栽培のポイント</a>
-<a>簡単にんじん料理をご紹介！</a>
-<a>農業って食べていけるの？気になる年収を大公開</a>
-<a>はじめまして。カピぞうの紹介です</a>
+<ul>
+<li><a>温室栽培での注意トップ10</a></li>
+<li><a>虫の駆除方法を現役農家がレクチャーします</a></li>
+<li><a>お家でもできる！プランター栽培のポイント</a></li>
+<li><a>簡単にんじん料理をご紹介！</a></li>
+<li><a>農業って食べていけるの？気になる年収を大公開</a></li>
+<li><a>はじめまして。カピぞうの紹介です</a></li>
+</ul>
+</nav>
 <p><img src="images/side_banner.png" alt="オンラインショップ"></p>
 </aside>
 </div>
