--- a/farm/index.html
+++ b/farm/index.html
@@ -12,11 +12,11 @@
  <h1><img src="images/logo.png" alt="FARM CAPYZOU"></h1>
 <nav>
 <ul>
-<li><a href="#">HOME</a></li>
-<li><a href="#">ABOUT</a></li>
-<li><a href="#">BLOG</a></li>
-<li><a href="#">SHOP</a></li>
-<li><a href="#">CONTACT</a></li>
+<li><a href="index.html">HOME</a></li>
+<li><a href="about.html">ABOUT</a></li>
+<li><a href="blog.html">BLOG</a></li>
+<li><a href="shop.html">SHOP</a></li>
+<li><a href="contact.html">CONTACT</a></li>
 </ul>
 </nav>
 </header>
